--- a/styles/signin.css
+++ b/styles/signin.css
@@ -11,111 +11,60 @@ div.main-container {
   font-family: "Poppins", sans-serif;
 }
 
-div.login-form div.left-content div.img-sign {
+div.left-content {
   display: none;
 }
-div.login-form div.right-content div.login-header {
-  margin-top: 4em;
-  text-align: center;
+
+div.right-content {
+  padding-top: 4em;
 }
-div.login-form div.right-content div.login-header h1 {
-  font-size: 26px;
-  font-weight: bold;
+div.right-content p.text-center {
+  margin-bottom: 4em;
 }
-div.login-form div.right-content form {
-  padding: 4em 1em;
-}
-div.login-form div.right-content form label {
-  font-size: 14px;
-}
-div.login-form div.right-content div.d-grid button {
-  margin-top: 3em;
-}
-div.login-form div.right-content div.already-acc {
-  margin: 0 1.4em;
-  font-size: 14px;
+div.right-content form {
+  padding: 1em;
 }
 
 @media screen and (min-width: 768px) {
-  div.login-form {
-    height: 100vh;
+  div.main-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    height: 100vh;
   }
-  div.login-form div.left-content {
+
+  div.left-content {
     padding: 4em 1em;
-    display: inline-block;
     background: #F2F2F2;
+    display: inline-block;
   }
-  div.login-form div.left-content div.img-sign {
-    display: block;
+  div.left-content h1 {
+    font-size: 36px;
+    font-weight: bold;
     text-align: center;
   }
-  div.login-form div.left-content div.img-sign h1 {
-    font-size: 26px;
-    font-weight: bold;
-  }
-  div.login-form div.left-content div.img-sign p {
-    font-size: 16px;
-  }
-  div.login-form div.left-content div.img-sign img {
-    margin-top: 3em;
-    display: flex;
+  div.left-content p {
+    font-size: 20px;
+    text-align: center;
   }
 }
 @media screen and (min-width: 1200px) {
-  div.login-form div.left-content div.img-sign h1 {
-    font-size: 32px;
+  div.right-content {
+    padding: 4em 4em;
+  }
+  div.right-content h2 {
+    font-size: 36px;
     font-weight: bold;
   }
-  div.login-form div.left-content div.img-sign p {
-    font-size: 20px;
-  }
-  div.login-form div.right-content div.login-header h1 {
-    font-size: 32px;
-  }
-  div.login-form div.right-content form {
-    padding: 6em 4em;
-  }
-  div.login-form div.right-content form label {
-    font-size: 20px;
-  }
-  div.login-form div.right-content form input {
-    padding: 0.8em;
-  }
-  div.login-form div.right-content form label.remember {
-    margin-left: 0.7em;
-  }
-  div.login-form div.right-content form label.terms {
-    font-size: 16px;
-  }
-  div.login-form div.right-content form button {
-    padding: 0.8em;
-  }
-  div.login-form div.right-content div.already-acc {
-    padding: 0 2em;
+  div.right-content p {
     font-size: 20px;
   }
 }
 @media screen and (min-width: 1280px) {
-  div.login-form div.left-content div.img-sign h1 {
-    font-size: 32px;
-    font-weight: bold;
+  div.right-content form {
+    padding: 0 7em;
+    margin-bottom: 3em;
   }
-  div.login-form div.left-content div.img-sign p {
+  div.right-content form label {
     font-size: 20px;
-  }
-  div.login-form div.right-content div.login-header h1 {
-    font-size: 32px;
-  }
-  div.login-form div.right-content form {
-    padding: 6em 6em;
-  }
-  div.login-form div.right-content form label {
-    font-size: 20px;
-  }
-  div.login-form div.right-content div.already-acc {
-    padding: 0 4.8em;
-    font-size: 16px;
   }
 }/*# sourceMappingURL=signin.css.map */
