--- a/styles/signup.css
+++ b/styles/signup.css
@@ -18,11 +18,12 @@ div.left-content {
 div.right-content {
   padding-top: 4em;
 }
-div.right-content p.text-center {
-  margin-bottom: 4em;
-}
 div.right-content form {
   padding: 1em;
+}
+div.right-content form h2.text-center {
+  font-weight: bold;
+  padding-top: 7em;
 }
 
 @media screen and (min-width: 768px) {
@@ -31,7 +32,6 @@ div.right-content form {
     grid-template-columns: 1fr 1fr;
     height: 100vh;
   }
-
   div.left-content {
     padding: 4em 1em;
     background: #F2F2F2;
