--- a/styles/cart.css
+++ b/styles/cart.css
@@ -54,6 +54,10 @@ nav div.collapse ul.navbar-nav li.nav-item a.login:hover {
   transition: 0.4s;
 }
 
+img {
+  max-width: 70%;
+}
+
 div.cartList-container {
   padding: 0 1em;
 }
@@ -61,9 +65,6 @@ div.cartList-container {
 table td {
   justify-content: center;
   align-items: center;
-}
-table td img {
-  max-width: 80%;
 }
 table td p {
   font-size: 12px;
