--- a/assets/css/merchandize.scss
+++ b/assets/css/merchandize.scss
@@ -16,10 +16,22 @@ $box-shadow-inset:            inset 0 1px 2px rgba($black, .075);
 div.search-container{
   padding: 12px 60px;
 
+  div.input-group.input-group-lg.mt-3{
+    background: $white;
+  }
+
+  span.input-group-text{
+    background: $white;
+    border: none;
+  }
+
   div.input-group.input-group-lg{
     width: 420px;
     box-shadow: 9px 11px 5px -4px rgba(0,0,0,0.11);
     border-radius: 17px;
+    input{
+      border: none;
+    }
   }
 }
 
@@ -44,17 +56,18 @@ div.merchandize-container{
         padding: 1em 1em;
         border-radius: 17px;
         box-shadow: 9px 11px 5px -4px rgba(0,0,0,0.11);
-        div.card-body{
-          text-align: left;
-          padding: 0;
           h5{
-            font-size: 18px;
+            font-size: 16px;
           }
           p{
             font-size: 14px;
             color: $fadewhite;
           }
-        }
+
+      }
+      button.card:hover{
+        background: #F2F2F2;
+        transition: ease-in-out 0.3s;
       }
     }
 
@@ -102,6 +115,7 @@ div.merchandize-container{
 
       div.body-invoice{
         height: 100vh;
+        border-radius:  7px;
         padding: 1em 1em;
         background: $white;
         align-items: center;
@@ -109,14 +123,13 @@ div.merchandize-container{
 
 
         div.bill-pay{
-
           img{
             margin-top: 1.7em;
             align-items: center;
             justify-content: center;
           }
           div.card{
-            border-radius: 7px;
+            border-radius: 7px;      
           }
         }
 
@@ -155,7 +168,7 @@ div.merchandize-container{
             align-items: center;
             justify-content: center;
             border: #6C757D 1px solid;
-            padding: .4em;
+            padding: 2em;
             border-radius: 7px;
             margin: auto;
             width: auto;
