--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
     }
     
     body{
-        min-height: 100vh;
+        min-height: 100%;
         background-color: var(--body-color);
         transition: var(--tran-05);
     }
