--- a/styles/cart.css
+++ b/styles/cart.css
@@ -21,14 +21,6 @@ nav {
   -moz-box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
   padding: 0 1em;
 }
-nav div.logo h1 {
-  font-size: 16px;
-  font-weight: bold;
-}
-nav div.logo span.ent {
-  font-size: 12px;
-  letter-spacing: 5px;
-}
 nav ul li.nav-item a {
   color: #212529;
   text-decoration: none;
@@ -121,14 +113,6 @@ div.foot-container div.checkout-container i.bi.bi-bag-check {
 }
 
 @media screen and (min-width: 768px) {
-  nav div.logo h1 {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  nav div.logo span.ent {
-    font-size: 18px;
-    letter-spacing: 5px;
-  }
   table td input {
     font-size: 14px;
   }
@@ -170,33 +154,14 @@ div.foot-container div.checkout-container i.bi.bi-bag-check {
 @media screen and (min-width: 992px) {
   nav {
     padding: 0 1em;
-    display: flex;
     align-items: center;
-    justify-content: space-between;
   }
-  nav div.logo h1 {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  nav div.logo span.ent {
-    font-size: 16px;
-    letter-spacing: 5px;
-  }
-  nav ul li.nav-item a.btnRegister {
-    color: #FFFFFF;
-    border-radius: 0.4em;
-    padding: 0.6em;
-    background: #0d6efd;
-  }
-  nav ul li.nav-item a.btnRegister:hover {
-    background: #0853c4;
-    transition: 0.4s;
-  }
-  nav div.collapse ul.navbar-nav {
-    margin-left: auto;
+  nav ul.navbar-nav li.nav-item {
+    text-align: center;
+    align-items: center;
   }
   nav div.collapse ul.navbar-nav li.nav-item a {
-    font-size: 16px;
+    font-size: 20px;
     margin-left: 2em;
   }
 }
@@ -205,7 +170,7 @@ div.foot-container div.checkout-container i.bi.bi-bag-check {
     padding: 0 5em;
   }
 }
-@media screen and (min-width: 1200px) and (min-width: 1200px) {
+@media screen and (min-width: 1200px) and (min-width: 1280px) {
   div.cartList-container {
     padding: 0 5em;
   }
