--- a/styles/signin.scss
+++ b/styles/signin.scss
@@ -1,94 +1,254 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-$colors:(
-    bg-body: #FFFFFF,
-    bg-orange: #FF432A,
-    bg-blue: #0094FF,
-    bg-gray: #F2F2F2,
-    bg-font: #212529
-);
-
-$font: 'Poppins', sans-serif;
-
-@function color($color-name){
-    @return map-get($colors, $color-name);
-}
-
-div.main-container{
-    background: color(bg-body);
-    font-family: $font;
-    }
-    div.left-content{
-        display:none;
-    }
-
-    //RIGHT CONTENT
-    div.right-content{
-        padding-top: 4em;
-    p.text-center{
-        margin-bottom: 4em;
-    }
-    form{
-        padding: 1em;
+// nav{
+//   a.navbar-brand{
+//     img{
+//       max-width: 176px;
+//     }
+//   }
+// }
+//NAVIGATION SECTION
+nav{
+    box-shadow: -1px 6px 59px -35px rgba(41,41,41,0.75);
+    -webkit-box-shadow: -1px 6px 59px -35px rgba(41,41,41,0.75);
+    -moz-box-shadow: -1px 6px 59px -35px rgba(41,41,41,0.75);
+    padding: 0 1em;
+    a.navbar-brand{
+      width: 50%;
+      img{
+        max-width: 176px;
       }
     }
-    
-
-//768 VIEW
-@media screen and(min-width: 768px){
-    div.main-container{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        height: 100vh;
-       }
-       div.left-content{
-        padding: 4em 1em;
-        background: color(bg-gray);
-        display: inline-block;
-    
-        h1{
-            font-size: 36px;
-            font-weight: bold;
-            text-align: center;
-        }
-        p{
-            font-size: 20px;
-            text-align: center;
-        }
-       }
-}
-
-//1200 VIEW
-@media screen and(min-width: 1200px){
-    div.right-content{
-        padding: 4em 4em;
-        h2{
-            font-size: 36px;
-            font-weight: bold;
-        }
-        p{
-            font-size: 20px;
-        }
-    }
-}
-
-//1280 VIEW
-@media screen and(min-width: 1280px){
-    div.right-content{
-        form{
-            
-            padding: 0 7em;
-            margin-bottom: 3em;
-            label{
-                font-size: 20px;
+  
+    ul{     
+        li.nav-item{
+          text-align: center;
+          padding-top: .2em;
+          margin-bottom: .7em;
+            a{  
+                 color: #212529;
+                text-decoration: none;
+                list-style: none;
             }
         }
     }
-}
+  
+    div.collapse{
+       ul.navbar-nav{
+        li.nav-item{
+            a.home:hover{
+                color: color(bg-orange);
+                transition: 0.4s;
+            }
+            a.shop:hover{
+                color: color(bg-orange);
+                transition: 0.4s;
+            }
+            a.about:hover{
+                color: color(bg-orange);
+                transition: 0.4s;
+            }
+            a.login:hover{
+                color: color(bg-orange);
+                transition: 0.4s;
+            }
+           }
+        }
+  
+    }
+  }
+  
+  div.main-container{
+    background: #FFFFFF;
+    height: 100%;
+  }
+  
+  div.form-container{
+    padding: 2em 1em;
+  
+    div.left-content{
+      img{
+        max-width: 400px;
+        margin: auto;
+        display: block;
+        justify-content: center;
+        align-items: center;
+      }
+      div.hello-welcome{
+        display: none;
+      }
+     
+      h1{
+        text-align: center;
+        font-weight: 700;
+        font-size: 28px;
+      }
+      p{
+        margin-top: 1em;
+        font-size: 18px;
+        padding: 0 2em;
+        text-align: center;
+      }
+    }
+  
+    div.right-content{
+      h1{
+        display: none;
+      }
+      p{
+        display: none;
+      }
+      form{
+        label{
+          font-size: 18px;
+          font-weight: 700;
+        }
+        input{
+          border-radius: 7px;
+        }
+      }
+    }
+  }
+  
+  @media screen and(min-width: 912px){
+    nav{
+      padding: 0 1em;
+      align-items: center;
+      a.navbar-brand{
+          width: 0;
+      }
+      ul.navbar-nav{
+          li.nav-item{
+              text-align: center;
+              align-items: center;
+          }
+      }
+      ul.navbar-nav{
+          i{
+              font-size: 26px;
+          }
+       
+      }
+  
+      div.collapse{
+          ul.navbar-nav{
+              margin-left: auto;
+              li.nav-item a{
+                  font-size: 20px;
+                  margin-left: 2em;
+              }
+            }
+           }
+         }
+  
+    div.main-container{
+      background-image: linear-gradient(to right, #2882FF , #4160CB);
+      height: 100vh;
+    }
+    // nav{
+    //   padding: 0 3em;
+    // }
+    div.form-container{
+      height: 80vh;
+      padding: 5em 3em;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      div.left-content{
+        border-radius: 17px 0 0 17px;
+        padding: 1em;
+        background: #E6E7E6;
+        div.hello-welcome{
+          h1{
+            text-align: center;
+            margin-top: 1em;
+            font-size: 20px;
+          }
+          p{   
+            font-size: 18px;
+          }
+          display: block;
+        }
+        div.sign-mob{
+          display: none;
+        }
+        img{
+          padding-top: 4em;
+        }
+      }
+      div.right-content{
+        padding: 1em;
+        border-radius: 0 17px 17px 0;
+        background: #FFFFFF;
+        form{
+          padding: 0 1em;
+          h1{
+            margin-top: 1em;
+            font-size: 20px;
+            display: block;
+            font-weight: 700;
+          }
+          p{
+            font-size: 18px;
+            display: block;
+          }
+        }
+      }
+    }
+  }
+  
+  @media screen and (min-width: 1200px){
+    nav{
+      padding: 0 5em;
+    }
+  
+    div.main-container{
+      div.form-container{
+        padding: 5em 6em;
+        div.left-content{
+          border-radius: 17px 0 0 17px;
+        }
+        div.right-content{
+          border-radius: 0 17px 17px 0;
+        }
+      }
+    }
+  }
+  
+  @media screen and (min-width: 1390px){
+    nav{
+      padding: 0 12em;
+    }
+  
+    div.main-container{  
+      height: 100vh;
+      div.form-container{
+        padding: 4em 26em;
+      }
+      
+    }
+  }
+  
+  @media screen and (min-width: 1490px){
+    nav{
+      padding: 0 12em;
+    }
+  
+    div.main-container{  
+      height: 100vh;
+      div.form-container{
+        padding: 4em 22em;
+        div.left-content{
+          h1{
+            margin-top: 2em;
+          }
+        }
+        div.right-content{
+          h1{
+            margin-top: 2.2em;
+          }
+        }
+      }
+      
+    }
+  }
