--- a/styles/signup.css
+++ b/styles/signup.css
@@ -6,65 +6,185 @@
   box-sizing: border-box;
 }
 
-div.main-container {
-  background: #FFFFFF;
-  font-family: "Poppins", sans-serif;
+nav {
+  box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
+  -webkit-box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
+  -moz-box-shadow: -1px 6px 59px -35px rgba(41, 41, 41, 0.75);
+  padding: 0 1em;
+}
+nav a.navbar-brand {
+  width: 50%;
+}
+nav a.navbar-brand img {
+  max-width: 176px;
+}
+nav ul li.nav-item {
+  text-align: center;
+  padding-top: 0.2em;
+  margin-bottom: 0.7em;
+}
+nav ul li.nav-item a {
+  color: #212529;
+  text-decoration: none;
+  list-style: none;
+}
+nav div.collapse ul.navbar-nav li.nav-item a.home:hover {
+  color: color(bg-orange);
+  transition: 0.4s;
+}
+nav div.collapse ul.navbar-nav li.nav-item a.shop:hover {
+  color: color(bg-orange);
+  transition: 0.4s;
+}
+nav div.collapse ul.navbar-nav li.nav-item a.about:hover {
+  color: color(bg-orange);
+  transition: 0.4s;
+}
+nav div.collapse ul.navbar-nav li.nav-item a.login:hover {
+  color: color(bg-orange);
+  transition: 0.4s;
 }
 
-div.left-content {
+div.main-container div.form-container {
+  padding: 0 1em;
+}
+div.main-container div.form-container div.tabimg-container {
   display: none;
 }
+div.main-container div.form-container div.left-content {
+  padding-top: 3em;
+}
+div.main-container div.form-container div.right-content h1 {
+  font-weight: 700;
+}
+div.main-container div.form-container div.right-content p {
+  text-align: center;
+}
+div.main-container div.form-container div.right-content form label {
+  font-weight: 700;
+}
+div.main-container div.form-container div.right-content form p {
+  margin-bottom: 3em;
+}
 
-div.right-content {
-  padding-top: 4em;
-}
-div.right-content form {
-  padding: 1em;
-}
-div.right-content form h2.text-center {
-  font-weight: bold;
-  padding-top: 7em;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 912px) {
+  nav {
+    padding: 0 1em;
+    align-items: center;
+  }
+  nav a.navbar-brand {
+    width: 0;
+  }
+  nav ul.navbar-nav li.nav-item {
+    text-align: center;
+    align-items: center;
+  }
+  nav ul.navbar-nav i {
+    font-size: 26px;
+  }
+  nav div.collapse ul.navbar-nav {
+    margin-left: auto;
+  }
+  nav div.collapse ul.navbar-nav li.nav-item a {
+    font-size: 20px;
+    margin-left: 2em;
+  }
   div.main-container {
+    height: 100vh;
+    background: #DDDDDD;
+  }
+  div.form-container {
+    margin-top: 3em;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 100vh;
   }
-  div.left-content {
-    padding: 4em 1em;
-    background: #F2F2F2;
-    display: inline-block;
+  div.form-container div.left-content {
+    border-radius: 17px 0 0 17px;
+    padding: 1em;
+    background: #E6E7E6;
   }
-  div.left-content h1 {
-    font-size: 36px;
-    font-weight: bold;
+  div.form-container div.left-content div.tabimg-container {
+    display: block;
+  }
+  div.form-container div.left-content div.tabimg-container img {
+    display: block;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  div.form-container div.left-content div.tabimg-container h1 {
     text-align: center;
-  }
-  div.left-content p {
+    margin-top: 1em;
     font-size: 20px;
+    font-weight: 700;
+  }
+  div.form-container div.left-content div.tabimg-container p {
     text-align: center;
+    font-size: 18px;
+  }
+  div.form-container div.left-content div.sign-mob {
+    display: none;
+  }
+  div.form-container div.left-content img {
+    padding-top: 4em;
+  }
+  div.form-container div.right-content {
+    padding: 1em;
+    border-radius: 0 17px 17px 0;
+    background: #FFFFFF;
+  }
+  div.form-container div.right-content form {
+    padding: 0 1em;
+  }
+  div.form-container div.right-content form label.userLabel {
+    margin-top: 3em;
+  }
+  div.form-container div.right-content form h1 {
+    display: none;
+  }
+  div.form-container div.right-content form p {
+    display: none;
   }
 }
 @media screen and (min-width: 1200px) {
-  div.right-content {
-    padding: 4em 2em;
+  nav {
+    padding: 0 5em;
   }
-  div.right-content h2 {
-    font-size: 36px;
-    font-weight: bold;
+  div.main-container div.form-container {
+    padding: 5em 6em;
   }
-  div.right-content p {
-    font-size: 20px;
+  div.main-container div.form-container div.left-content {
+    border-radius: 17px 0 0 17px;
+  }
+  div.main-container div.form-container div.right-content {
+    border-radius: 0 17px 17px 0;
   }
 }
-@media screen and (min-width: 1280px) {
-  div.right-content form {
-    padding: 0 7em;
-    margin-bottom: 3em;
+@media screen and (min-width: 1390px) {
+  nav {
+    padding: 0 12em;
   }
-  div.right-content form label {
-    font-size: 20px;
+  div.main-container {
+    height: 100vh;
+  }
+  div.main-container div.form-container {
+    padding: 4em 26em;
+  }
+}
+@media screen and (min-width: 1490px) {
+  nav {
+    padding: 0 12em;
+  }
+  div.main-container {
+    height: 100%;
+  }
+  div.main-container div.form-container {
+    padding: 1em 22em;
+  }
+  div.main-container div.form-container div.left-content h1 {
+    margin-top: 2em;
+  }
+  div.main-container div.form-container div.right-content h1 {
+    margin-top: 2.2em;
   }
 }/*# sourceMappingURL=signup.css.map */
